add keywork help for input description

--- a/modules/module-chrono-interface/.vscode/settings.json
+++ b/modules/module-chrono-interface/.vscode/settings.json
@@ -65,6 +65,7 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "regex": "cpp"
     }
 }
