Fix missing include directories when build with dynamic loaded modules

--- a/modules/module-octave/Makefile.inc
+++ b/modules/module-octave/Makefile.inc
@@ -1,6 +1,4 @@
 ## $Header$
 MODULE_DEPENDENCIES=octave_object.lo
-#LIBPATH=/usr/lib/octave-3.2.4/
-#LIBPATH=/usr/lib/debug/usr/lib/octave-3.2.4/
-#MODULE_LINK=-L$(LIBPATH) -Wl,-rpath=$(LIBPATH) -loctinterp -loctave # -lcruft
-MODULE_LINK=-loctinterp -loctave # -lcruft
+MODULE_INCLUDE=$(OCTAVE_INCLUDE)
+MODULE_LINK=$(OCTAVE_LIBS)
