Fix build with dynamic loaded module-octave

--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -98,7 +98,9 @@ all__:
 				case $$f in \*.h|\*.c|\*.cc|\*.f|\*.f90|\*.f95) ;; *) if test ! -f $$i/$$f && test -f $$isrc/$$f ; then ( cd $$i && ln -sf $$isrca/$$f $$f ) ; fi ; ;; esac ; \
 			done ; \
 			cp $(srcdir)/Makefile.module $$i/Makefile ; \
-			( cd $$i && $(MAKE) MBDYN_MODULE_SRCDIR=$$isrca ) ; \
+			( cd $$i && $(MAKE) OCTAVE_INCLUDE="$(OCTAVE_INCLUDE)" \
+					    OCTAVE_LIBS="$(OCTAVE_LIBS)" \
+					    MBDYN_MODULE_SRCDIR=$$isrca ) ; \
 			rm -f $$i/Makefile ; \
 		done \
 	fi
