fix building --enable-crypt, issue #92

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -143,7 +143,7 @@ ann_tr_SOURCES = ann_tr.c
 autopilot_SOURCES = autopilot.c
 c81merge_SOURCES = c81merge.cc
 c81test_SOURCES = c81test.cc
-crypt_SOURCES = crypt.c
+crypt_SOURCES = crypt.cc
 cl_SOURCES = cl.cc
 dae_intg_SOURCES = dae-intg.cc dae-intg.h
 deriv_SOURCES = deriv.c
