fix linking order, issue #94

--- a/libraries/libmbutil/Makefile.am
+++ b/libraries/libmbutil/Makefile.am
@@ -74,8 +74,8 @@ AM_CPPFLAGS = \
 
 noinst_PROGRAMS = mbsasltest testexcept
 mbsasltest_SOURCES = mbsasltest.c
-mbsasltest_LDADD = @SECURITY_LIBS@ \
-libmbutil.la
+mbsasltest_LDADD = libmbutil.la \
+@SECURITY_LIBS@
 
 testexcept_SOURCES = testexcept.cc
 testexcept_LDADD =  \
