fix commit d85f23e13a5edbd70760d6647af826972a8982a8

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -214,7 +214,7 @@ test_strext_socket_lib.h
 
 libstrext_socket_f_la_SOURCES = \
 test_strext_socket_f.f \
-test_strext_socket_f_main.c
+test_strext_socket_f_main.c \
 test_strext_socket_lib.h
 endif
 
